fix: Change z-index for glossary to be on top

--- a/assets/styles/base-styles.scss
+++ b/assets/styles/base-styles.scss
@@ -189,7 +189,7 @@ picture {
   font-size: 16px;
 }
 .z-index-topmost {
-  z-index: 10000;
+  z-index: 1100;
 }
 // general color configuration
 .green-primary {
